@@ -98,6 +98,8 @@ Trunk (not yet released)
     AVRO-1331. Java: Fix schema-parsing incompatibility from AVRO-1295.
     (cutting)
 
+    AVRO-1181. compileJsonSchemaFromString(std::string) declared in Compiler.hh but not defined (Daniel Russel via thiru)
+
 Avro 1.7.4 (22 February 2012)
 
   NEW FEATURES
